# forum-stack

./: .gitignore  Dockerfile  INSTALL.md  README.md  docker-compose.yml  forum-stack.sh  forum.config.env.example
Handovers/: 12-civic-ai.md  13-pod-as-source-of-truth.md  14-monorepo-and-cleanup.md  15-coop-pipeline-split.md  16-ownership-by-default.md  17-installer-release-pipeline-live.md  18-recovery-identity-do.md  19-airlock-local-first-webapp.md  20-cooperative-sync-aggregate-refresh.md  21-reconsolidate-monorepo.md  handover1.md  handover10-edge-d1.md  handover11-security-hardening.md  handover2.md  handover3-solid.md  handover4-solid-ops.md  handover5-zkemail-qbe.md  handover6-secure-pod-first.md  handover7-lint-build-clean.md  handover8-do-pivot.md  handover9-webauthn-only.md
deploy/: build-android-apk.sh  build-android-release-apk.sh  cloudflared-config.yml  cloudflared-forum.yml.example  cloudflared-pod-ingress.example.yml  forum-analysis.service  forum-analysis.timer  forum-apk-download.service  forum-cloudflared.service  forum-pod-launch.sh  forum-solid.service  go-live-checklist.md  install-cloudflared-config.sh  install-forum-server.sh  install-phone-access.sh  publish-android-apk.sh
desktop/: README.md  forum-pod.key.pub  package.json
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  workerd-config.capnp
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: main.rs
docs/: ANDROID-KEYSTORE.md  ARCHITECTURE-DATA-FLOW.md  BENCH-NUMBERS.md  COOP-INCORPORATION-MEMO.md  (+13 more)
(+146 files in other folders)
